Hold prefetch_loader_factory in ChildURLLoaderFactoryBundle

Currently PrefetchURLLoader in the browser process handles prefetch requests to
reduce the memory consumption by skipping sending back the body to the renderer
process, and to handle signed exchanges.

But when NetworkService or ServiceWorkerServicification feature is enabled,
prefetch requests from Service Worker controlled pages don't go to the
PrefetchURLLoader. So SignedExchange's prefetching processes, such as
certificate fetching and sub resource preloading will not be triggered.

To fix this problem, this CL moves the prefetch_loader_factory from
RenderFrameImpl to ChildURLLoaderFactoryBundle.
BuildServiceWorkerNetworkProviderForNavigation() clones the
ChildURLLoaderFactoryBundle with the prefetch_loader_factory, and passes it
to the ServiceWorkerNetworkProvider as a fallback_loader_factory which will be
used when respondWith() of the fetch event is not called in the service worker.

Note: This CL moves the routing logic of prefetch request from
RenderFrameImpl::FrameURLLoaderFactory to ChildURLLoaderFactoryBundle.
Calling fetch(event.request) in service workers for prefetch requests doesn't go
to the PrefetchURLLoader. So the signed exchange handling is not triggerd. This
change is supposed to be tentative and should go away, as we're likely moving
the special prefetch handling code into the network service. So we can remove
this change when that happens.

Bug: 890748
Change-Id: I6b5362b180a133d9274a20045ef82eaad9034ee4
Reviewed-on: https://chromium-review.googlesource.com/c/1256468
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596540}
Former-commit-id: 2cf21db73cae3e714f3c553652efc585cdea67a4