content/renderer/loader/tracked_child_url_loader_factory_bundle.cc
@@ -18,6 +18,7 @@ TrackedChildURLLoaderFactoryBundleInfo::TrackedChildURLLoaderFactoryBundleInfo(
     SchemeMap scheme_specific_factory_infos,
     OriginMap initiator_specific_factory_infos,
     PossiblyAssociatedURLLoaderFactoryPtrInfo direct_network_factory_info,
+    network::mojom::URLLoaderFactoryPtrInfo prefetch_loader_factory_info,
     std::unique_ptr<HostPtrAndTaskRunner> main_thread_host_bundle,
     bool bypass_redirect_checks)
     : ChildURLLoaderFactoryBundleInfo(
@@ -25,6 +26,7 @@ TrackedChildURLLoaderFactoryBundleInfo::TrackedChildURLLoaderFactoryBundleInfo(
           std::move(scheme_specific_factory_infos),
           std::move(initiator_specific_factory_infos),
           std::move(direct_network_factory_info),
+          std::move(prefetch_loader_factory_info),
           bypass_redirect_checks),
       main_thread_host_bundle_(std::move(main_thread_host_bundle)) {}
 
@@ -40,6 +42,8 @@ TrackedChildURLLoaderFactoryBundleInfo::CreateFactory() {
   other->initiator_specific_factory_infos_ =
       std::move(initiator_specific_factory_infos_);
   other->direct_network_factory_info_ = std::move(direct_network_factory_info_);
+  other->prefetch_loader_factory_info_ =
+      std::move(prefetch_loader_factory_info_);
   other->main_thread_host_bundle_ = std::move(main_thread_host_bundle_);
   other->bypass_redirect_checks_ = bypass_redirect_checks_;
 
@@ -76,6 +80,7 @@ TrackedChildURLLoaderFactoryBundle::Clone() {
       std::move(info->scheme_specific_factory_infos()),
       std::move(info->initiator_specific_factory_infos()),
       std::move(info->direct_network_factory_info()),
+      std::move(info->prefetch_loader_factory_info()),
       std::move(main_thread_host_bundle_clone), info->bypass_redirect_checks());
 }
 
@@ -140,6 +145,7 @@ HostChildURLLoaderFactoryBundle::Clone() {
       std::move(info->scheme_specific_factory_infos()),
       std::move(info->initiator_specific_factory_infos()),
       std::move(info->direct_network_factory_info()),
+      std::move(info->prefetch_loader_factory_info()),
       std::move(main_thread_host_bundle_clone), info->bypass_redirect_checks());
 }
 
@@ -158,6 +164,7 @@ HostChildURLLoaderFactoryBundle::CloneWithoutDefaultFactory() {
       std::move(info->scheme_specific_factory_infos()),
       std::move(info->initiator_specific_factory_infos()),
       std::move(info->direct_network_factory_info()),
+      std::move(info->prefetch_loader_factory_info()),
       std::move(main_thread_host_bundle_clone), info->bypass_redirect_checks());
 }
 
