content/renderer/loader/tracked_child_url_loader_factory_bundle.h
@@ -32,6 +32,7 @@ class CONTENT_EXPORT TrackedChildURLLoaderFactoryBundleInfo
       SchemeMap scheme_specific_factory_infos,
       OriginMap initiator_specific_factory_infos,
       PossiblyAssociatedURLLoaderFactoryPtrInfo direct_network_factory_info,
+      network::mojom::URLLoaderFactoryPtrInfo prefetch_loader_factory_info,
       std::unique_ptr<HostPtrAndTaskRunner> main_thread_host_bundle,
       bool bypass_redirect_checks);
   ~TrackedChildURLLoaderFactoryBundleInfo() override;
