content/renderer/service_worker/service_worker_context_client.cc
@@ -629,7 +629,8 @@ ServiceWorkerContextClient::ServiceWorkerContextClient(
     loader_factories_ = base::MakeRefCounted<HostChildURLLoaderFactoryBundle>(
         main_thread_task_runner_);
     loader_factories_->Update(std::make_unique<ChildURLLoaderFactoryBundleInfo>(
-                                  std::move(subresource_loaders)),
+                                  std::move(subresource_loaders),
+                                  nullptr /* prefetch_loader_factory_info */),
                               base::nullopt /* subresource_overrides */);
   }
 
